fix logic so working code is actually saved, add example with Claude 3.7 Sonnet (best one yet), add indicator how long requests take

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "manim-video"
 version = "0.1.0"
 description = "Automatic video generation using an agentic LLM flow in combination with the manim python library."
 readme = "README.md"
-License = "MIT
+License = "MIT"
 requires-python = ">=3.10"
 dependencies = [
     "litellm>=1.59.8",
