--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,14 +12,19 @@ requires-python = ">=3.10"
 keywords = ["manim", "video", "generation", "llm", "ai"]
 dependencies = [
   "litellm>=1.59.8",
-  "manim>=0.17.0",
+  "manim>=0.19.0",
   "opencv-python>=4.11.0.86",
   "python-dotenv>=1.0.0",
   "rich>=13.0.0",
 ]
 
 [project.optional-dependencies]
-dev = ["ruff>=0.12.5", "pytest>=8.0.0", "pytest-cov>=4.0.0", "pre-commit>=3.0.0"]
+dev = [
+  "ruff>=0.12.5",
+  "pytest>=8.0.0",
+  "pytest-cov>=4.0.0",
+  "pre-commit>=3.0.0",
+]
 test = ["pytest>=8.0.0"]
 
 [project.scripts]
@@ -27,7 +32,12 @@ manim-generate = "manim_generator.main:main"
 manim-render = "manim_generator.cli:manual_render"
 
 [dependency-groups]
-dev = ["ruff>=0.12.5", "pytest>=8.0.0", "pytest-cov>=4.0.0", "pre-commit>=3.0.0"]
+dev = [
+  "ruff>=0.12.5",
+  "pytest>=8.0.0",
+  "pytest-cov>=4.0.0",
+  "pre-commit>=3.0.0",
+]
 
 [tool.ruff]
 line-length = 100
@@ -44,5 +54,3 @@ python_files = ["test_*.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
 addopts = "-v --tb=short"
-
-
