--- a/.env.example
+++ b/.env.example
@@ -4,15 +4,7 @@
 OPENROUTER_API_KEY=your_openrouter_api_key_here
 
 # Alternative: Direct Provider API Keys
-# Uncomment and use these if you want to bypass OpenRouter
+# Uncomment and use these if you want to use openai/anthropic directly
 # OPENAI_API_KEY=your_openai_api_key_here
 # ANTHROPIC_API_KEY=your_anthropic_api_key_here
 
-# Optional: LiteLLM Configuration
-# Uncomment to enable debug logging for LiteLLM
-# LITELLM_LOG=DEBUG
-
-# Optional: Custom Model Endpoints
-# Set custom base URLs for specific providers if needed
-# OPENAI_API_BASE=https://api.openai.com/v1
-# ANTHROPIC_API_BASE=https://api.anthropic.com
